--- a/.github/workflows/action-blank.yml
+++ b/.github/workflows/action-blank.yml
@@ -5,7 +5,6 @@ jobs:
   first-job:
     runs-on: ubuntu-latest
     steps:
-      - name: Print greeting
-        run: echo "Hello world"
-      - name: Print Goodbye
-        run: echo "Done - bye!"
+      - name: Print greeting and goodbye
+        run: |
+            echo "Hello world, Good day"
